file index aa kuso darsaday si aan live usaaro

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li>Contact</li>
         </ul>
     </div>
+    <!-- Waxa raba in aan git saaro-->
 
     <div class="pt-28 flex justify-around">
         <div>
